<resources>
    <string name="app_name">Lesson1</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в Википедии</string>
    <string name="favourite">favorite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="text_veiw_text">ВЫБОР ТЕМЫ:</string>
    <string name="default_text">Default</string>
    <string name="entry_text">Entry</string>
    <string name="choice_text">Choice</string>
    <string name="action_text">Action</string>
    <string name="filter_text">Filter</string>
    <string name="background_color_text">Background Color</string>
    <string name="ripple_color_text">Ripple Color</string>
    <string name="chip_icon_text">Chip icon</string>
    <string name="choice_a_text">Choice A</string>
    <string name="choice_b_text">Choice B</string>
    <string name="choice_c_text">Choice C</string>
    <string name="choice_d_text">Choice D</string>
    <string name="choice_e_text">Choice E</string>
    <string name="choice_f_text">Choice F</string>
    <string name="btn_orange_theme_text">Orange</string>
    <string name="btn_green_theme_text">Green</string>
    <string name="main_theme_text">Main</string>
    <string name="error">Error!!!</string>
    <string name="reload">Reload</string>
    <string name="photo_of_mars">Фото Марса</string>
    <string name="title_activity_animations">AnimationsActivity</string>
    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>